# shadow_augmentor

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
src/shadow_augmentor/: __init__.py  __main__.py  adapters.py  augment.py  builder.py  cli.py  constants.py  debug.py  geometry.py  models.py  segmenters.py  training.py  yolo.py
tests/: test_shadow_augmentor.py
